# patchup

./: .gitignore  docker-compose.yml  readme.md
.do/: app.yaml
.github/workflows/: cli.yml  client.yml
cli/: .gitignore  Cargo.toml  readme.md
cli/package/: metadata.sh  pkgbuild.bin.sh  pkgbuild.sh
cli/pkg/: PKGBUILD.template  metadata.sh
cli/src/: cli.rs  diff.old.rs  diff.rs  file.rs  main.rs  patch.rs  plan.rs
cli/src/files/: directory.rs  file.rs  mod.rs
cli/src/patching/: addition.rs  core.rs  deletion.rs  delta.rs  mod.rs  patch.rs
client/: .gitignore  Dockerfile  next.config.js  package-lock.json  package.json
client/components/: Card.tsx  NavBar.tsx  OctopusLogo.tsx
client/components/organisation/: Activity.tsx  Header.tsx  Members.tsx  Repositories.tsx  Settings.tsx  index.tsx
client/components/repository/: Overview.tsx  Patches.tsx
client/pages/: _app.tsx  index.tsx  organisation.tsx  repository.tsx  signin.tsx  signup.tsx
client/pages/organisation/: index.tsx
client/pages/repository/: index.tsx
client/public/: index.html  manifest.json
client/src/: index.js
client/src/actions/: auth.js
client/src/assets/: DeliveryLogo.jsx  OctopusLogo.jsx  SpeedLogo.jsx
client/src/components/: About.jsx  App.jsx  Copyright.jsx  Footer.jsx  Header.jsx  Main.jsx  SellingPoint.jsx  Upload.jsx  app.jsx  feature.jsx  footer.jsx  header.jsx  main.jsx  menu.jsx  nav.jsx
client/src/pages/: about.jsx  dashboard.jsx  update.jsx  upload.jsx
client/src/reducers/: auth.js  root.js
client/src/store/: index.js
client/src/themes/: dark.js
client/store/: index.ts  reducer.ts  saga.ts
client/styles/: theme.ts
server/: .gitignore  Cargo.toml  Dockerfile  database.js  package-lock.json  package.json  server.js
server/controllers/: upload.js  user.js
server/middleware/: auth.js
server/migrations/2020-08-25-074236_users/: up.sql
server/migrations/2021-05-06-070147_orgs/: down.sql  up.sql
server/migrations/2021-05-06-071334_repos/: up.sql
server/migrations/2021-05-06-071747_patches/: down.sql  up.sql
server/models/: user.js
server/routes/: index.js  upload.js  user.js
server/src/: constants.rs  error.rs  hashing.rs  main.rs  models.rs  schema.rs
server/src/config/: db.rs  routes.rs
server/src/controllers/: status.rs
server/src/handlers/: status.rs  user.rs
server/src/models/: mod.rs  org.rs  response.rs  token.rs  user.rs
server/src/routes/: mod.rs
server/src/services/: auth.rs  mod.rs  org.rs  user.rs
server/src/src/: schema.rs
terraform/: .gitignore  example.tfvars  infrastructure.tf  vars.tf
terraform/bucket/: main.tf  variables.tf
terraform/development/: main.tf  providers.tf
terraform/production/: keys.tf  main.tf  providers.tf
terraform/server/: main.tf  vars.tf
(+5 files in other folders)
