[package]
name = "patchup"
version = "0.1.0"
description = "A tool to compute and apply binary patches for files and directories"
license = "MIT"
authors = ["Ben Mitchell <dezyh@outlook.com>"]
edition = "2018"
repository = "https://github.com/dezyh/patchup"
readme = "https://github.com/dezyh/patchup/cli/readme.md"
keywords = ["patch", "diff"]

[dependencies]
bidiff = "1.0.0"
bipatch = "1.0.0"
pipe = "0.4.0"
byteorder = "1.4.3"
argh = "0.1.4"
walkdir = "2.3.2"
zstd = "0.5"
