[package]
name = "patchup-server"
version = "0.1.0"
authors = ["Ben Mitchell <dezyh@outlook.com>"]
edition = "2018"

[dependencies]
actix-web = "3.3"
r2d2 = "0.8"
diesel = { version = "1.4", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
diesel_migrations = "1.4"
dotenv = "0.15"
log = "0.4"
env_logger = "0.7"
uuid = { version = "0.8", features = ["v4"] }
jsonwebtoken = "7.2.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
argonautica = "0.2"
